# django-mongodb-cli

./: .gitignore  .pre-commit-config.yaml  README.md  SHELL_DEPENDENCY_MAP.md  apps_wagtail.py  justfile  mongo_apps.py  mongo_settings.py  mongodb_settings.py  pyproject.toml  qe.py  settings.py  settings_drf.py  settings_filter.py  settings_wagtail.py
.github/workflows/: runtests-wagtail.yml
backend_template/mongo_migrations/wagtailembeds/: 0001_initial.py
backend_template/mongo_migrations/wagtailredirects/: 0001_initial.py
backend_template/project_name/settings/: __init__.py
config/django/: django_settings.py
config/settings/: settings_drf_extensions.py
django_mongodb_cli/: __init__.py  app.py  clone.py  config.py  createsuperuser.py  db.py  frontend.py  install.py  makemigrations.py  manage.py  migrate.py  proj.py  project.py  repo.py  runserver.py  runtests.py  settings.py  shell.py  startapp.py  startproject.py  startui.py  test.py  utils.py
django_mongodb_cli/templates/project_template/: justfile  manage.py-tpl
django_mongodb_cli/templates/project_template/project_name/: settings.py  urls.py  wsgi.py
django_mongodb_cli/templates/project_template/project_name/settings/: base.py  qe.py  routers.py
docs/: conf.py  index.rst
docs/intro/: install.rst
docs/source/: conf.py  index.rst  installation.rst  third-party-library-support.rst
docs/source/libraries/: django-filter.rst  index.rst
docs/source/supported-libraries/: django-filter.rst  index.rst
jira/: INTPYTHON-527.py
migration_settings/: settings_drf.py
patches/: HeadCountRelatedModelUsingPK.patch
project_template/mongo_migrations/admin/: 0001_initial.py
project_template/mongo_migrations/auth/: 0001_initial.py
project_template/mongo_migrations/contenttypes/: 0001_initial.py
project_template/mongo_migrations/demosite/: 0001_initial.py
project_template/mongo_migrations/i18n/: 0001_initial.py
project_template/mongo_migrations/routablepagetests/: 0001_initial.py
project_template/mongo_migrations/streamfield_migration_tests/: 0001_initial.py
project_template/mongo_migrations/taggit/: 0001_initial.py
project_template/mongo_migrations/tests/: 0001_initial.py
project_template/mongo_migrations/wagtailadmin/: 0001_initial.py
project_template/mongo_migrations/wagtailcore/: 0001_initial.py
project_template/mongo_migrations/wagtaildocs/: 0001_initial.py
project_template/mongo_migrations/wagtailembeds/: 0001_initial.py
project_template/mongo_migrations/wagtailforms/: 0001_initial.py
project_template/mongo_migrations/wagtailimages/: 0001_initial.py
project_template/mongo_migrations/wagtailredirects/: 0001_initial.py
project_template/mongo_migrations/wagtailsearch/: 0001_initial.py
project_template/mongo_migrations/wagtailusers/: 0001_initial.py
project_template/project_name/settings/: __init__.py
project_template/webpack_boilerplate/: config.py  loader.py
project_templates/app_template/templates/: app_name.html
project_templates/frontend_template/{{cookiecutter.project_slug}}/: package.json
project_templates/frontend_template/{{cookiecutter.project_slug}}/src/application/: app.js
project_templates/project/mongo_migrations/i18n/: 0001_initial.py
project_templates/project/mongo_migrations/tests/: 0001_initial.py
project_templates/project/mongo_migrations/wagtailsearch/: 0001_initial.py
project_templates/project/project_name/settings/: __init__.py
project_templates/project_template/: package.json
project_templates/project_template/mongo_migrations/admin/: 0001_initial.py
project_templates/project_template/mongo_migrations/auth/: 0001_initial.py
project_templates/project_template/mongo_migrations/contenttypes/: 0001_initial.py
project_templates/project_template/mongo_migrations/demosite/: 0001_initial.py
project_templates/project_template/mongo_migrations/taggit/: 0001_initial.py
project_templates/project_template/mongo_migrations/tests/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailadmin/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailcore/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtaildocs/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailembeds/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailforms/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailimages/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailredirects/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailsearch/: 0001_initial.py
project_templates/project_template/mongo_migrations/wagtailusers/: 0001_initial.py
project_templates/project_template/project_name/: urls.py
project_templates/project_template/project_name/settings/: __init__.py
project_templates/project_template/project_name/templates/: base.html
settings/: allauth_settings.py  apps_allauth.py  debug_toolbar_apps.py  debug_toolbar_settings.py  settings_allauth.py
settings_migration/: settings_drf.py
settings_test/: settings_drf.py  settings_drf_migrate.py  settings_filter.py  settings_wagtail.py
test/settings/: django.py  django_migrations.py  qe.py  settings_drf.py  settings_drf_extensions.py  settings_wagtail.py
test_apps/: apps_wagtail.py
test_settings/: settings_allauth_regular.py  settings_debug_toolbar.py  settings_django.py  settings_django_debug_toolbar.py  settings_drf.py  settings_filter.py  settings_wagtail.py
