[project]
name = "django-mongodb-cli"
version = "0.1.0"
dependencies = [
    "GitPython",
    "Sphinx",
    "click",
    "django-extensions",
    "dj-database-url",
    "freezegun",
    "html5lib",
    "psycopg2",
    "pytest",
    "pytest-django",
    "python-webpack-boilerplate",
    "requests",
    "setuptools",
    "toml",
]

[tool.setuptools]
packages = ["django_mongodb_cli"]

[tool.django_mongodb_cli]
dev = [
    "django-allauth @ git+ssh://git@github.com/pennersr/django-allauth@main",
    "django-debug-toolbar @ git+ssh://git@github.com/django-commons/django-debug-toolbar@main",
    "django-filter @ git+ssh://git@github.com/aclark4life/django-filter@main # upstream: carltongibson",
    "django-mongodb-app @ git+ssh://git@github.com/aclark4life/django-mongodb-app@main # upstream: mongodb-labs",
    "django-mongodb-backend @ git+ssh://git@github.com/aclark4life/django-mongodb-backend@main # upstream: mongodb",
    "django-mongodb-polls @ git+ssh://git@github.com/aclark4life/django-mongodb-polls@main",
    "django-mongodb-project @ git+ssh://git@github.com/aclark4life/django-mongodb-project@main # upstream: mongodb-labs",
    "django-mongodb-tutorial @ git+ssh://git@github.com/aclark4life/django-mongodb-tutorial@main",
    "django-rest-framework @ git+ssh://git@github.com/aclark4life/django-rest-framework@main # upstream: encode",
    "django @ git+ssh://git@github.com/mongodb-forks/django@mongodb-5.1.x",
    "django-project-templates @ git+ssh://git@github.com/aclark4life/django-project-templates@main",
    "pymongo @ git+ssh://git@github.com/mongodb/mongo-python-driver@master",
    "wagtail-mongodb-project @ git+ssh://git@github.com/aclark4life/wagtail-mongodb-project@main",
    "wagtail-mongodb-bakery @ git+ssh://git@github.com/aclark4life/wagtail-mongodb-bakery@main",
    "wagtail @ git+ssh://git@github.com/wagtail/wagtail@main",
]

[project.scripts]
django-mongodb-cli = "django_mongodb_cli:cli"
