[project]
name = "django-mongodb-cli"
version = "0.1.0"
dependencies = [
    "GitPython",
#     "Sphinx",
    "click",
#     "django-extensions",
#     "django-modelcluster",
#     "django-taggit",
#     "dj-database-url",
#     "freezegun",
#     "html5lib",
#     "psycopg2",
     "pytest",
#     "pytest-django",
#     "python-webpack-boilerplate",
#     "pytz",
#     "requests",
     "setuptools",
     "toml",
     "tox",
]

[tool.setuptools]
packages = ["django_mongodb_cli"]

[tool.django_mongodb_cli]
dev = [
    "bakerydemo @ git+ssh://git@github.com/aclark4life/bakerydemo@main # upstream: wagtail",
    "django-allauth @ git+ssh://git@github.com/pennersr/django-allauth@main",
    "django-debug-toolbar @ git+ssh://git@github.com/django-commons/django-debug-toolbar@main",
    "django-filter @ git+ssh://git@github.com/aclark4life/django-filter@main # upstream: carltongibson",
    "django-mongodb-app @ git+ssh://git@github.com/aclark4life/django-mongodb-app@main # upstream: mongodb-labs",
    "django-mongodb-backend @ git+ssh://git@github.com/aclark4life/django-mongodb-backend@main # upstream: mongodb",
    "django-mongodb-project @ git+ssh://git@github.com/aclark4life/django-mongodb-project@main # upstream: mongodb-labs",
    "django-rest-framework @ git+ssh://git@github.com/encode/django-rest-framework@main",
    "django @ git+ssh://git@github.com/mongodb-forks/django@mongodb-5.1.x",
    "django-project-templates @ git+ssh://git@github.com/aclark4life/django-project-templates@main",
    "langchain-mongodb @ git+ssh://git@github.com/langchain-ai/langchain-mongodb@main",
    "pymongo @ git+ssh://git@github.com/mongodb/mongo-python-driver@master",
    "wagtail-mongodb-project @ git+ssh://git@github.com/aclark4life/wagtail-mongodb-project@main",
    "wagtail @ git+ssh://git@github.com/wagtail/wagtail@main",
]

[project.scripts]
django-mongodb-cli = "django_mongodb_cli:cli"
