[project]
name = "django-mongodb-cli"
version = "0.1.0"
dependencies = [
    "GitPython",  # For git integration
    "Sphinx",  # For django-mongodb-backend documentation
    "click",
    "django-extensions",  # <3 django-extensions
    "dj-database-url",  # For startproject and testing with postgres
    "fido2",  # For django-allauth
    "html5lib",  # Required by django-debug-toolbar
    "jwt",  # For django-allauth
    "pytest",
    "pytest-django",  # For django-rest-framework and django-debug-toolbar
    "python3-openid",  # For django-allauth
    "python3-saml",  # For django-allauth
    "python-webpack-boilerplate",  # For startproject
    "setuptools",  # For django-rest-framework
    "toml",
    "requests-oauthlib",  # For django-allauth
]

[tool.setuptools]
packages = ["django_mongodb_cli"]

[tool.django_mongodb_cli]
dev = [
    "bakerydemo @ git+ssh://git@github.com/aclark4life/bakerydemo@main # upstream: wagtail",
    "django-allauth @ git+ssh://git@github.com/pennersr/django-allauth@main",
    "django-debug-toolbar @ git+ssh://git@github.com/django-commons/django-debug-toolbar@main",
    "django-filter @ git+ssh://git@github.com/aclark4life/django-filter@main # upstream: carltongibson",
    "django-import-export @ git+ssh://git@github.com/django-import-export/django-import-export@main",
    "django-mongodb-app @ git+ssh://git@github.com/aclark4life/django-mongodb-app@main # upstream: mongodb-labs",
    "django-mongodb-backend @ git+ssh://git@github.com/aclark4life/django-mongodb-backend@main # upstream: mongodb",
    "django-mongodb-extensions @ git+ssh://git@github.com/aclark4life/django-mongodb-extensions@main",
    "django-mongodb-project @ git+ssh://git@github.com/aclark4life/django-mongodb-project@main # upstream: mongodb-labs",
    "django-rest-framework @ git+ssh://git@github.com/encode/django-rest-framework@main",
    "django @ git+ssh://git@github.com/mongodb-forks/django@mongodb-5.1.x",
    "django-project-templates @ git+ssh://git@github.com/aclark4life/django-project-templates@main",
    "langchain-mongodb @ git+ssh://git@github.com/langchain-ai/langchain-mongodb@main",
    "pymongo @ git+ssh://git@github.com/mongodb/mongo-python-driver@master",
    "wagtail-mongodb-project @ git+ssh://git@github.com/aclark4life/wagtail-mongodb-project@main",
    "wagtail @ git+ssh://git@github.com/wagtail/wagtail@main",
]

[project.scripts]
django-mongodb-cli = "django_mongodb_cli:cli"
